docs/v1.0.5/CHANGELOGS/Mappls-Map.md
## v8.0.8, 02 June, 2023
- Added Location play service v21.0.1 Support.
- Bug Fixes & Improvements

## v8.0.7, 02 May, 2023
- Added Predictive Routing APIs
- Bug Fixes & Improvements

## v8.0.6, 03 April, 2023
- Added Geolocation API
- Added `routeIndex` request parameter in Trip Cost Estimation API.
- Added `lang` request parameter  in Reverse Geocode API.
- Bug Fixes & Improvements

## v8.0.5, 06 February, 2023
- Added Error Codes while initialising the map
- Added Reset Compass Engine
- Bug Fixes & Improvements

## v8.0.4, 18 October, 2022
- Added PlaceClickListener on map which provides `mapplsPin`
- Bug Fixes & Improvements

## v8.0.3, 26 September, 2022
- Added Weather API

## v8.0.2, 28 August, 2022
- Added Android auto support

## v8.0.1, 19 August, 2022
- Added `mapplsPin` in Reverse Geocode
- Bug Fixes

## v8.0.0, 14 June, 2022
- Initial Mappls Release